<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_total"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#afafb7b4"
    android:orientation="vertical"
    tools:context="com.lfeng.pipingfactory.MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textColor="#333333"
        android:textSize="27sp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/guan_shu_select_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/is_guan_shu"
                android:textColor="@color/black"/>

            <RadioGroup
                android:id="@+id/guan_shu_select_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/guan_shu_select_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/no" />

                <RadioButton
                    android:id="@+id/guan_shu_select_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />
            </RadioGroup>

        </LinearLayout>

        <EditText
            android:id="@+id/et_search"
            android:layout_width="500dp"
            android:layout_height="50dp"
            android:background="@drawable/et_search"
            android:foregroundGravity="center"
            android:hint="@string/select_id"
            android:paddingLeft="20dp" />

        <Button
            android:id="@+id/bt_search"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:background="@drawable/main_button"
            android:text="@string/select"
            android:textColor="#393939"
            android:textSize="20sp" />

    </LinearLayout>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/head"
                android:textSize="21sp" />

            <LinearLayout
                android:id="@+id/ll_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>


            <TextView
                android:id="@+id/tv_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content"
                android:textSize="21sp" />

            <LinearLayout
                android:id="@+id/ll_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp" />
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="50dp"
            android:background="@drawable/main_button"
            android:onClick="no"
            android:text="@string/exit"
            android:textColor="#393939"
            android:textSize="20sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="50dp"
            android:background="@drawable/main_button"
            android:onClick="ok"
            android:text="@string/confirm"
            android:textColor="#393939"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="50dp"
            android:background="@drawable/main_button"
            android:onClick="finish"
            android:text="@string/finished"
            android:textColor="#393939"
            android:textSize="20sp"
            android:visibility="gone"/>
    </LinearLayout>


</LinearLayout>
