<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_back"
    android:orientation="vertical"
    tools:context="com.lfeng.pipingfactory.SettingActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:text="@string/setting_server"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/login_layout">

        <EditText
            android:id="@+id/et_server"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:autoLink="web"
            android:background="@null"
            android:hint="@string/setting_server_input"
            android:inputType="textUri"
            android:paddingLeft="20dp"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_setting"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="50dp"
            android:layout_weight="1"
            android:background="@drawable/login_button"
            android:text="@string/confirm"
            android:textColor="#464646"
            android:textSize="22sp" />

        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="50dp"
            android:layout_weight="1"
            android:background="@drawable/login_button"
            android:text="@string/cancel"
            android:textColor="#464646"
            android:textSize="22sp" />
    </LinearLayout>
</LinearLayout>
